@@ -2,8 +2,13 @@ powernap (2.8) unreleased; urgency=low
 
   * Switch to dpkg-source 3.0 (quilt) format
   * Switch to dh_python2 instead of dh_pycentral
+  * sbin/powernap: ACTION_METHOD is now passed as an argument.
+  * Second Stage Action Method (LP: #711521)
+    - config: Add config options.
+    - powernap/powernap.py: Add loading of config values.
+    - sbin/powernapd: Add logic to handle second stage action.
 
- -- Andres Rodriguez <andreserl@ubuntu.com>  Wed, 04 May 2011 16:25:48 -0400
+ -- Andres Rodriguez <andreserl@ubuntu.com>  Wed, 01 Jun 2011 12:32:05 -0400
 
 powernap (2.7-0ubuntu1) oneiric; urgency=low
 
